# asnvil

./: .gitignore  AGENTS.md  Cargo.toml  README.md  conftest.py  justfile  test_indefinite_ber.py  test_roundtrip.py
asn1c/: Cargo.toml
asn1c-codegen/: Cargo.toml
asn1c-codegen/src/: builder.rs  code_ast.rs  lib.rs  python.rs  renderer.rs
asn1c-codegen/templates/python/: list_type.txt  module_header.txt  struct.txt  type_alias.txt
asn1c-ir/: Cargo.toml
asn1c-ir/src/: error.rs  from_ast.rs  ir.rs  lib.rs  resolver.rs
asn1c-parser/: Cargo.toml  build.rs
asn1c-parser/src/: asn1.par  asn1.par.bak  ast.rs  error.rs  grammar.rs  grammar_scanner.rs  lib.rs
asn1c-runtime-python/: ber.py  der.py  errors.py
asn1c/examples/: demo.rs
asn1c/src/: main.rs
asn1c/tests/: cli_tests.rs
asnvil/: Cargo.toml
asnvil-codegen/: Cargo.toml
asnvil-codegen/src/: builder.rs  code_ast.rs  lib.rs  python.rs  renderer.rs  rust.rs
asnvil-codegen/templates/python/: choice.txt  enum.askama  enum.txt  list_type.txt  macros.txt  module_header.askama  module_header.txt  struct.txt
asnvil-codegen/templates/python/decode/: decode_any_tlv.txt  decode_bit_string.txt  decode_boolean.askama  decode_bytes.txt  decode_integer.askama  decode_list.askama  decode_null.askama  decode_oid.askama  decode_real.txt  decode_referenced_tlv.txt  decode_string.askama  decode_time.txt
asnvil-codegen/templates/python/encode/: encode_any.txt  encode_bit_string.txt  encode_boolean.askama  encode_bytes.txt  encode_enumerated.askama  encode_integer.txt  encode_list.askama  encode_null.askama  encode_oid.txt  encode_real.txt  encode_referenced.askama  encode_string.askama  encode_time.txt  list_element_referenced.askama
asnvil-codegen/templates/rust/: decode_any.txt  decode_bit_string.txt  decode_boolean.txt  decode_bytes.txt  decode_integer.txt  decode_null.txt  decode_oid.txt  decode_referenced.txt  decode_string.txt  encode_any.txt  encode_bit_string.txt  encode_boolean.txt  encode_bytes.txt  encode_integer.txt  encode_list.txt  encode_null.txt  encode_oid.txt  encode_referenced.txt  encode_string.txt  encode_wrap_explicit.txt  encode_wrap_implicit.txt
asnvil-ir/: Cargo.toml
asnvil-ir/src/: error.rs  from_ast.rs  ir.rs  lib.rs  resolver.rs
asnvil-parser/: Cargo.toml
asnvil-parser/src/: asn1.par  ast.rs  error.rs  grammar.rs  lib.rs
asnvil-parser/tests/: parser_vectors.rs
asnvil-runtime-python/: __init__.py  ber.py  der.py  errors.py  oer.py  types.py
asnvil-runtime-rust/: Cargo.toml
asnvil-runtime-rust/src/: ber.rs  der.rs  errors.rs  lib.rs  oer.rs  types.rs
asnvil/examples/: demo.rs
asnvil/src/: main.rs
asnvil/tests/: cli_tests.rs
tests/: AGENTS.md  README.md  TestModule.py  any_defined_by.asn1  conftest.py  explicit_choice.asn1  inline_choice.asn1  run_integration.py  test_any_defined_by.py  test_explicit_choice.py  test_indefinite_ber.py  test_inline_choice.py  test_runtime.py  test_runtime_ber_vectors.py
tests/asn1c_runtime/: types.py
tests/integration/: LDAPv3.py  PKIX1Explicit.py  constrained_types.asn1  ldap_protocol.asn1  snmp_protocol.asn1  test_constrained_types.py  test_ldap_roundtrip.py  test_snmp_roundtrip.py  test_x509_roundtrip.py  x509_certificate.asn1
tests/rust_integration/: Cargo.toml
tests/rust_integration/src/: lib.rs
tests/rust_integration/tests/: explicit_choice.rs
tests/vectors/asn1/: 1000_imports.asn1  1001_value_items.asn1  1002_named_numbers.asn1  1003_parameterized_types.asn1  1004_hex_strings.asn1  1005_invalid_hex_string.asn1  1007_value_sequences.asn1  2000_constrained_types.asn1  3001_any_defined_by.asn1  3002_inline_choice.asn1  4000_x509_subset.asn1  4001_ldap_subset.asn1  4002_snmp_subset.asn1  4005_multi_tag.asn1  4006_embedded_choice.asn1
(+59 files in other folders)
