[workspace]
members = [
    "asnvil",
    "asnvil-parser",
    "asnvil-ir",
    "asnvil-codegen",
    "asnvil-runtime-rust",
    "tests/rust_integration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
num-bigint = "0.4"
miette = { version = "7", features = ["fancy"] }
