[package]
name = "asnvil-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
asnvil-ir = { path = "../asnvil-ir" }
askama = { version = "0.16", features = ["config"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow.workspace = true

[dev-dependencies]
num-bigint.workspace = true
