[package]
name = "asnvil-parser"
version.workspace = true
edition.workspace = true

[dependencies]
parol_runtime = "4"
scnr2 = "0.5"
thiserror.workspace = true
miette.workspace = true
num-bigint.workspace = true
anyhow.workspace = true

[build-dependencies]
parol = { version = "4", features = ["build"] }
