[package]
name = "asnvil"
version.workspace = true
edition.workspace = true

[[bin]]
name = "asnvil"
path = "src/main.rs"

[dependencies]
asnvil-parser = { path = "../asnvil-parser" }
asnvil-ir = { path = "../asnvil-ir" }
asnvil-codegen = { path = "../asnvil-codegen" }

clap.workspace = true
anyhow.workspace = true
miette.workspace = true
num-bigint.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
